raw delete registered ruleset code (needs more)

--- a/appPages/confirming-deletion.html
+++ b/appPages/confirming-deletion.html
@@ -1,12 +1,1 @@
-<div data-role="page" id="confirming-deletion">
-	<div data-role="header">
-		
-	</div>
-
-	<div data-role="main" class="ui-content">
-	
-	</div>
-	<div data-role="footer">
-			
-	</div>
-</div>
+<!--moved to updating url-->
