updating data-titles (browser tabs)

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="home">
+<div data-role="page" id="home" data-title="KRL Developer Tools">
 
    <div data-role="header" data-theme="b" data-position="inline" class="ui-header ui-bar-b" role="banner">
      <h1>Welcome To KRL Development Homepage</h1>
