--- a/appPages/install-rulesets.html
+++ b/appPages/install-rulesets.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page-installed-rulesets" data-title="Pico Logs">
+<div data-role="page" id="page-installed-rulesets" data-title="Installed Rulesets">
   {% include header.html title="Installed Rulesets" %}
 
    <div data-role="content">
