--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -43,7 +43,7 @@
 			    	<input type="hidden" name="delete" id="delete-input" value="" />
 				</form>
 				<div>
-					<a id="delete-rid-button" href="#confirming-deletion?rid={{rid}}*****" data-rel="dialog" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
+					<a id="delete-rid-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
 				</div>
 			</li>
 		</ul>
@@ -58,17 +58,4 @@
 
 
 
-<div data-role="page" data-rel="dialog" id="confirming-deletion">
-	<div data-role="header">
-	</div>
-
-	<div data-role="main" class="ui-content">
-		<ul id="delete-ruleset" data-role="listview" data-inset="true"> 
-     	  </ul>
-		   
-	</div>
-
-	<div data-role="footer">
-	</div>
-</div>
 
