--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -30,8 +30,8 @@
 	    <li>
 	      <form id="form-install-channel">
 	        <div data-role="fieldcontain">
-   	          <label for="rid">Channel ID:</label>
-		  <input type="text" name="rid" id="rid" value="" placeholder="b495674x14.prod" />
+   	          <label for="channel_name">Channel Name:</label>
+		  <input type="text" name="channel_name" id="channel_name" value="" placeholder="KRL Rocks" />
 		</div>
 	      </form>
 	      <div>
