--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -26,3 +26,91 @@
 	</div>
 	{% include footer.html %}
 </div>
+
+<!-- -------------------------- -/listing.html ---------------------------- -->
+
+<div data-role="page" id="listing">
+	
+    {% include header.html title="Registered Rulesets" %}
+
+  	<div data-role="main" class="ui-content">
+    
+          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true" > 
+            <li data-role="list-divider" >Ruleset List</li>
+            <li>
+              <a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">New Ruleset</a>
+            </li>  
+          </ul><!-- /listview -->
+          <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search for a ruleset here"> 
+            
+          </ul>
+
+	</div>
+	
+  {% include footer.html %}
+  
+</div>
+
+<!-- -------------------------- -/updating-url.html ---------------------------- -->
+
+<div data-role="page" id="updating-url">
+	
+	{% include header.html title="Manage Registered Ruleset" %}
+
+	<div data-role="main" class="ui-content">
+		
+		<ul id="update-url-list" data-role="listview" data-inset="true"> 
+			<li data-role="list-divider" >Update RID URL</li>
+			<li>
+				<form id="form-update-url">
+						<!--insert rid here-->
+						<!--url is here-->
+						<label for="url" id="urlLabel">New URL: </label>
+						<input type="text" name="url" id="url" value="" placeholder="New URL for ruleset" />
+				</form>
+				<div>
+					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
+					<a href="#listing" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+				</div>
+			</li>
+		</ul>
+
+
+		<ul id="flush-rid" data-role="listview" data-inset="true"> 
+			<li data-role="list-divider" >Flush RID</li>
+			<li>
+			  <form id="form-flush-rid">
+  			    <label for="flush" id="flushLabel">Flush RID</label>
+			    <input type="hidden" name="flush" id="flush-input" value="" />
+				</form>
+  			  <div>
+  			    <a id="flush-rid-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Flush</a>
+		          </div>
+			</li>
+		</ul>
+
+
+		<ul id="delete-rid" data-role="listview" data-inset="true"> 
+			<li data-role="list-divider" >Delete RID</li>
+			<li>
+				<form id="form-delete-rid">
+					<label for="deleteRIDval" id="deleteLabel">Delete RID</label>
+			    	<input type="hidden" name="delete" id="delete-input" value="" />
+				</form>
+				<div>
+					<a id="delete-rid-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Delete</a>
+				</div>
+			</li>
+		</ul>
+
+
+	</div>
+
+	{% include footer.html %}
+
+</div>
+
+
+
+
+
