--- a/code.html
+++ b/code.html
@@ -17,6 +17,6 @@ authors:
    </div><!-- /content -->
 
    <div data-role="footer" data-position="fixed">
-      <h4>KRL for Developers</h4>
+      <h4>KRL Developer Tools</h4>
    </div><!-- /footer -->
 </div><!-- /page -->
