channel management formatting

--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -46,7 +46,7 @@
 </div>
 
 <div data-role="page" id="confirm-uninstall-channel" data-title="Uninstall Channel">
-  {% include header.html title="Uninstall a Channel" %}
+  {% include header.html title="Delete a Channel" %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-channel" data-role="listview" data-inset="true"> 
