create not install channels

--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -21,11 +21,11 @@
 </div><!-- /page -->
 
 <div data-role="page" id="install-channel" data-title="Install channel">
-  {% include header.html title="Install a Channel" %}
+  {% include header.html title="Create a Channel" %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="install-channel" data-role="listview" data-inset="true"> 
-       	    <li data-role="list-divider" >Install Channel</li>
+       	    <li data-role="list-divider" >Create Channel</li>
 	    <li>
 	      <form id="form-install-channel">
 	        <div data-role="fieldcontain">
