own css, ruleset list as divs, spinners
I just took the css from andymatthews page because it was having issues
and not loading on the page. I also recognized our lists were all in
divs except for the ruleset list, so I made it so that was consistent
and also made it a collapsible list so we could make it more efficient
later on. I also made a function for the spinners to differ on whether
it’s loading or updating.

--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -41,9 +41,9 @@
               <a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">New Ruleset</a>
             </li>  
           </ul><!-- /listview -->
-          <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search for a ruleset here"> 
-            
-          </ul>
+
+          <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="manage-list">
+     	  </div>
 
 	</div>
 	
