Hacked in a hard logout

--- a/appPages/authorize.html
+++ b/appPages/authorize.html
@@ -21,6 +21,8 @@
   <a id="authorize-link" href="#" data-transition="slide" class="ui-btn ui-corner-all ui-btn-b ui-shadow ui-btn-inline">Authorize with Kynetx</a>
 
   <a id="create-link" href="#" data-transition="slide" class="ui-btn ui-corner-all ui-btn-a ui-shadow ui-btn-inline">Create Kynetx Account</a>
+  
+  <a id="account-link" href="#" data-transition="slide" class="ui-btn ui-corner-all ui-btn-a ui-shadow ui-btn-inline">My Kynetx Profile</a>
 
 </div><!-- /content -->
 
