Authorize client structure

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -20,7 +20,10 @@
 			</li>
 			<li>
 				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
-			</li>       
+			</li> 
+			<li>
+				<a href="#oAuth-client-registration" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Authorize Clients</a>
+			</li>        
 			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
 			</li>       
