--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: KRL Developer Tools
 {% include_relative appPages/install-rulesets.html %}
 
 {% include_relative appPages/channel-management.html %}
+{% include_relative appPages/oAuth-client-registration.html %}
 
 
 <!-- ----------templates ---------- -->
