--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -29,8 +29,16 @@
 	    <li>
 	      <form id="form-authorize-client">
 	        <div data-role="fieldcontain">
-   	          <label for="client_name">Client Name:</label>
-		  <input type="text" name="client_name" id="client_name" value="" placeholder="KRL Rocks" />
+   	          <label for="client_name">Name:</label>
+      <input type="text" name="client_name" id="client_name" value="" placeholder="KRL Rocks" />
+              <label for="client_Description">Description:</label>
+      <input type="text" name="client_Description" id="client_Description" value="" placeholder="KRL Rocks" />
+              <label for="client_image_url">Image url:</label>
+      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="KRL Rocks" />
+              <label for="client_callback_url">Callback url:</label>
+		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="KRL Rocks" />
+              <label for="client_declined_url">Declined url:</label>
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />
 		</div>
 	      </form>
 	      <div>
@@ -45,7 +53,7 @@
 
 </div>
 
-<div data-role="page" id="confirm-deAuthorization" data-title="DeAuthorize Client">
+<div data-role="page" id="confirm-client-remove" data-title="DeAuthorize Client">
   {% include header.html title="DeAuthorize Client" %}
 
 	<div data-role="main" class="ui-content">
