--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -38,11 +38,15 @@
               <label for="client_callback_url">Callback url:</label>
 		  <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="KRL Rocks" />
               <label for="client_declined_url">Declined url:</label>
-      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />             
+              <label for="client_info_page_url">info page url:</label>
+      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="KRL Rocks" />
+              <label for="client_bootstrapRids">bootstrap Rids:</label>
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="KRL Rocks" />
 		</div>
 	      </form>
 	      <div>
-                <a id="authorize-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Athorize</a>
+                <a id="authorize-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Authorize</a>
                 <a href="#oAuth-client-registration" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
 	      </div>
 	    </li>
@@ -65,12 +69,36 @@
 
   {% include footer.html %}
 </div>
-<div data-role="page" id="update-client" data-title="DeAuthorize Client">
-  {% include header.html title="DeAuthorize Client" %}
+<div data-role="page" id="update-client" data-title="Update Client">
+  {% include header.html title="Update Client" %}
 
   <div data-role="main" class="ui-content">
     <ul id="update-client" data-role="listview" data-inset="true"> 
-            
+      <li data-role="list-divider" >Update Client</li>
+      <li>
+        <form id="form-update-client">
+          <div data-role="fieldcontain">
+              <label for="client_name">Name:</label>
+      <input type="text" name="client_name" id="client_name" value="" placeholder="KRL Rocks" />
+              <label for="client_Description">Description:</label>
+      <input type="text" name="client_Description" id="client_Description" value="" placeholder="KRL Rocks" />
+              <label for="client_image_url">Image url:</label>
+      <input type="text" name="client_image_url" id="client_image_url" value="" placeholder="KRL Rocks" />
+              <label for="client_callback_url">Callback url:</label>
+      <input type="text" name="client_callback_url" id="client_callback_url" value="" placeholder="KRL Rocks" />
+              <label for="client_declined_url">Declined url:</label>
+      <input type="text" name="client_declined_url" id="client_declined_url" value="" placeholder="KRL Rocks" />             
+              <label for="client_info_page_url">info page url:</label>
+      <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="KRL Rocks" />
+              <label for="client_bootstrapRids">bootstrap Rids:</label>
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="KRL Rocks" />
+    </div>
+        </form>
+        <div>
+                <a id="update-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
+                <a href="#oAuth-client-registration" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+        </div>
+      </li>
         </ul>
   </div>
 
