--- a/appPages/home.html
+++ b/appPages/home.html
@@ -23,7 +23,10 @@
 			</li> 
 			<li>
 				<a href="#oAuth-client-registration" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Authorize Clients</a>
-			</li>        
+			</li> 
+			<li>
+				<a href="#page-schedules" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Scheduled Events</a>
+			</li>         
 			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
 			</li>       
