--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: KRL Developer Tools
 
 {% include_relative appPages/channel-management.html %}
 {% include_relative appPages/oAuth-client-registration.html %}
+{% include_relative appPages/Scheduled.html %}
 
 
 <!-- ----------templates ---------- -->
