--- a/appPages/home.html
+++ b/appPages/home.html
@@ -28,8 +28,11 @@
 				<a href="#page-schedules" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Scheduled Events</a>
 			</li>         
 			<li>
+				<a href="#page-subscription-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Subscriptions</a>
+			</li>
+			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
-			</li>       
+			</li>         
 		</ul>
 
 		
