--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: KRL Developer Tools
 {% include_relative appPages/channel-management.html %}
 {% include_relative appPages/oAuth-client-registration.html %}
 {% include_relative appPages/Scheduled.html %}
+{% include_relative appPages/subscription.html %}
 
 
 <!-- ----------templates ---------- -->
