--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -44,7 +44,7 @@
       </div>
     </form>
     <div>
-      <a id="Subscribe-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Install</a>
+    <a id="Subscribe-confirm-button" href="#approve-subscription" class="ui-btn ui-btn-b ui-btn-inline">Subscribe</a>
       <a href="#page-Subcription-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
     </div>
   </li>
