--- a/appPages/home.html
+++ b/appPages/home.html
@@ -22,7 +22,7 @@
 				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
 			</li> 
 			<li>
-				<a href="#oAuth-client-registration" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Authorize Clients</a>
+				<a href="#page-client-authorize" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Authorize Clients</a>
 			</li> 
 			<li>
 				<a href="#page-schedules" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Scheduled Events</a>
