--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="oAuth-client-registration" data-title="ECI Management" >
+<div data-role="page" id="page-client-authorize" data-title="ECI Management" >
   {% include header.html title="Client Registration" %}
 
    <div data-role="content">
