--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -47,7 +47,7 @@
 	      </form>
 	      <div>
                 <a id="authorize-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Authorize</a>
-                <a href="#oAuth-client-registration" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+                <a href="#page-client-authorize" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
 	      </div>
 	    </li>
      	  </ul>
@@ -96,7 +96,7 @@
         </form>
         <div>
                 <a id="update-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
-                <a href="#oAuth-client-registration" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+                <a href="#page-client-authorize" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
         </div>
       </li>
         </ul>
