--- a/appPages/authorize.html
+++ b/appPages/authorize.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page-authorize" data-title="Authorize Devtools" data-close-btn="none">
+<div data-role="page" id="page-authorize" data-title="Authorize Fuse" data-close-btn="none">
 
   {% include header.html title="Authorize" no_home="true" %}
 
