--- a/appPages/about.html
+++ b/appPages/about.html
@@ -6,8 +6,8 @@
 
 		<ul id="about-list" class="ruleset" data-role="listview" data-inset="true" >
 
-		<li data-role="list-divider">Account</li>
-			<li id="about-account">
+			<li data-role="list-divider">Account</li>
+				<li id="about-account">
 
 			</li>
 
@@ -25,6 +25,15 @@
 
 			</li>
 		</ul><!-- /listview -->
+
+		<br>
+		
+		<ul data-role="listview" data-inset="true">
+			<li data-role="list-divider">Children</li>
+		</ul>
+		
+		<div data-role="collapsible-set" data-content-theme="a" data-iconpos="right" id="child-picos">
+
 
 	</div>
 	
