--- a/appPages/about.html
+++ b/appPages/about.html
@@ -33,6 +33,7 @@
 		</ul>
 		
 		<div data-role="collapsible-set" data-content-theme="a" data-iconpos="right" id="child-picos">
+		</div>
 
 
 	</div>
