type for subscriptions

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -35,6 +35,8 @@
         <input type="text" name="Subcription_name" id="Subcription_name" value="" placeholder="KRL Rocks" />
         <label for="Subcription_name_space">Name Space:</label>
         <input type="text" name="Subcription_name_space" id="Subcription_name_space" value="" placeholder="KRL Rocks" />
+        <label for="Subcription_type">Channel Type:</label>
+        <input type="text" name="Subcription_type" id="Subcription_type" value="" placeholder="Type" />
         <label for="Subcription_relationship">Relationship:</label>
         <input type="text" name="Subcription_relationship" id="Subcription_relationship" value="" placeholder="KRL Rocks" />
         <label for="Subcription_target">Target:</label>
