navigate to parent picos

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -29,6 +29,20 @@
 		<br>
 		
 		<ul data-role="listview" data-inset="true">
+			<li data-role="list-divider">Primary</li>
+	        <li>
+	          <a id="Open-primary-button" href="" class="ui-btn ui-icon-arrow-r ui-btn-icon-right">Open Primary Pico : </a>
+	        </li>
+
+			<li data-role="list-divider">Parent</li>
+	        <li>
+	          <a id="Open-parent-button" href="" class="ui-btn ui-icon-arrow-r ui-btn-icon-right">Open Parent : </a>
+	        </li>
+		</ul>
+		
+		<br/>
+		
+		<ul data-role="listview" data-inset="true">
 			<li data-role="list-divider">Children</li>
 	        <li>
 	          <a id="Create-pico-button" href="#pico-creation" class="ui-btn ui-icon-edit ui-btn-icon-right">New Child Pico</a>
