append to correct div

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -5,7 +5,7 @@
 
    <div data-role="content">
        <p>
-         Welcome to the Subcription Manager. Here you can view and add Subcription for your Pico or Picos that you own.
+         Welcome to the Subcription Manager. Here you can view and add Subcription for your Pico.
         </p>
      <ul id="Subcriptions-control" data-role="listview" data-inset="true"> 
        <li data-role="list-divider" >Subcription Manager</li>
