adding channel management functionality

--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -31,6 +31,12 @@
 	        <div data-role="fieldcontain">
    	          <label for="channel_name">Channel Name:</label>
 		  <input type="text" name="channel_name" id="channel_name" value="" placeholder="KRL Rocks" />
+                    <label for="channel_type">Channel Type:</label>
+      <input type="text" name="channel_type" id="channel_type" value="" placeholder="KRL Rocks" />
+                    <label for="channel_policy">Channel Policy:</label>
+      <input type="text" name="channel_policy" id="channel_policy" value="" placeholder="KRL Rocks" />
+                    <label for="channel_attributes">Channel Attributes:</label>
+      <input type="text" name="channel_attributes" id="channel_attributes" value="" placeholder="KRL Rocks" />
 		</div>
 	      </form>
 	      <div>
