--- a/appPages/about.html
+++ b/appPages/about.html
@@ -70,9 +70,9 @@
     <li>
      <form id="form-new-pico">
        <div data-role="fieldcontain">
-        <label for="Subcription_name">Name:</label>
+        <label for="Subscription_name">Name:</label>
         <input type="text" name="Pico_name" id="Pico_name" value="" placeholder="KRL Rocks" />
-        <label for="Subcription_attrs">Prototypes:</label>
+        <label for="Subscription_attrs">Prototypes:</label>
         <input type="text" name="Pico_prototypes" id="Pico_prototypes" value="" placeholder="KRL Rocks" />
       </div>
     </form>
