--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -14,7 +14,7 @@
         <div data-role="navbar">
           <ul>
             <li><a href="#one" data-ajax="false">Scheduled Events</a></li>
-            <li><a href="ajax-content.html" data-ajax="false">History</a></li>
+            <li><a href="#two" data-ajax="false">History</a></li>
           </ul>
         </div>
         <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="scheduled-events">
