--- a/appPages/about.html
+++ b/appPages/about.html
@@ -6,20 +6,15 @@
 
 		<ul id="about-list" class="ruleset" data-role="listview" data-inset="true" >
 
-			<li data-role="list-divider">Account</li>
-				<li id="about-account">
-
-			</li>
-
-			<li data-role="list-divider">Pico ECI</li>
+			<li data-role="list-divider">Pico</li>
 			<li>
 
 				<p>
-					<b>Primary ECI: </b> <span id="about-eci"></span>
+					<b>ECI: </b> <span id="about-eci"></span>
 				</p>
 
 				<p  style="white-space : normal">
-					<b>Note: </b> the ECI is the path into your pico and should be treated as a shared secret between the pico and the application using the pico's Event-Qquery API. Do not disclose it or check it into a repository like Github.
+					<b>Note: </b> the ECI is the path into your pico and should be treated as a shared secret between the pico and the application using the pico's Event-Query API. Do not disclose it or check it into a repository like Github.
 				</p>
 
 
