--- a/appPages/home.html
+++ b/appPages/home.html
@@ -2,7 +2,7 @@
 
    <div data-role="header" data-theme="b" data-position="inline" class="ui-header ui-bar-b" role="banner">
      <h1>KRL Development Homepage</h1>
-     <a href="#" data-transition="slide" class="logout ui-link ui-btn-right ui-btn ui-btn-b ui-icon-power ui-btn-icon-left ui-shadow ui-corner-all">Logout</a>
+     <a href="#" data-transition="slide" class="logout ui-link ui-btn-right ui-btn ui-btn-b ui-icon-power ui-btn-icon-left ui-shadow ui-corner-all">Account</a>
    </div>
 	
 
