--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: KRL Developer Tools
 {% include_relative appPages/authorize.html %}
 
 {% include_relative appPages/about.html %}
+{% include_relative appPages/account.html %}
 
 {% include_relative appPages/registering-ruleset.html %}
 {% include_relative appPages/picologging.html %}
