don't show parent navigation options in primary pico

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -23,7 +23,7 @@
 
 		<br>
 		
-		<ul data-role="listview" data-inset="true">
+		<ul id="upwards-navigation-options" data-role="listview" data-inset="true">
 			<li data-role="list-divider">Primary</li>
 	        <li>
 	          <a id="Open-primary-button" href="" class="ui-btn ui-icon-arrow-r ui-btn-icon-right">Open Primary Pico : </a>
