plus icon not edit

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -10,7 +10,7 @@
      <ul id="Subscriptions-control" data-role="listview" data-inset="true"> 
        <li data-role="list-divider" >Subscription Manager</li>
        <li>
-         <a id="Subscribe-button" href="#Subscribe" class="ui-btn ui-icon-edit ui-btn-icon-right">New Subscription</a>
+         <a id="Subscribe-button" href="#Subscribe" class="ui-btn ui-icon-plus ui-btn-icon-right">New Subscription</a>
        </li>
      </ul>
 
