--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -46,7 +46,7 @@
 		</div>
 	      </form>
 	      <div>
-                <a id="authorize-client-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Authorize</a>
+                <a id="authorize-client-confirm-button" href="#page-client-authorize" class="ui-btn ui-btn-b ui-btn-inline">Authorize</a>
                 <a href="#page-client-authorize" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
 	      </div>
 	    </li>
