--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -37,8 +37,10 @@
         <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="KRL Rocks" />
         <label for="Subscription_type">Channel Type:</label>
         <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="Type" />
-        <label for="Subscription_relationship">Relationship:</label>
-        <input type="text" name="Subscription_relationship" id="Subscription_relationship" value="" placeholder="KRL Rocks" />
+        <label for="Subscription_my_role">My_role:</label>
+        <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="KRL Rocks" />
+        <label for="Subscription_your_role">Your_role:</label>
+        <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="KRL Rocks" />
         <label for="Subscription_target">Target:</label>
         <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="KRL Rocks" />
         <label for="Subscription_attrs">Attrs:</label>
