first attempt at names in KRL

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -67,8 +67,8 @@
        <div data-role="fieldcontain">
         <label for="Subscription_name">Name:</label>
         <input type="text" name="Pico_name" id="Pico_name" value="" placeholder="KRL Rocks" />
-        <label for="Subscription_attrs">Prototypes:</label>
-        <input type="text" name="Pico_prototypes" id="Pico_prototypes" value="" placeholder="KRL Rocks" />
+        <!--label for="Subscription_attrs">Prototypes:</label>
+        <input type="text" name="Pico_prototypes" id="Pico_prototypes" value="" placeholder="KRL Rocks" /-->
       </div>
     </form>
     <div>
