names added to new picos

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -10,6 +10,10 @@
 			<li>
 
 				<p>
+					<b>Name: </b> <span id="about-pico-name"></span>
+				</p>
+				
+				<p>
 					<b>ECI: </b> <span id="about-eci"></span>
 				</p>
 
