temporary recurring event text field

--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -67,6 +67,9 @@
 	          <label for="datetime">Date and Time:</label>
 	          <input type="datetime-local" data-clear-btn="false" name="date_time" id="date_time" value="">
 
+	          <label for="recurrment">Recurring schedule:</label>
+	      		<input type="text" name="recurrment" id="recurrment" value="" placeholder="CRONTAB Format" />
+
 	          <label for="event_attributes">Event Attributes:</label>
 	      		<input type="text" name="event_attributes" id="event_attributes" value="" placeholder="{'nano': rocks, ...}" />
 					</div>
